@@ -18,6 +18,11 @@ Check4Updates   On
 # if none is specified, it will be set to /var/run/pdlna.pid
 PIDFile			/var/run/pdlna.pid
 
+# TempDir
+# specify a temporary directoriy, where pDLNA is able to store some temporary files
+# if none is specified, it will be set to /tmp
+#TempDir			/tmp
+
 #
 # DATABASE CONFIGURATION
 #
@@ -32,7 +37,9 @@ PIDFile			/var/run/pdlna.pid
 # DatabaseName
 # define the name of the database, which should be used
 # in case of SQLITE3, specify the location of SQLITE3 file
-#DatabaseName
+#
+# if none is specified and the DatabaseType is SQLITE3, it will be set to /tmp/pdlna.db
+#DatabaseName /tmp/pdlna.db
 
 # DatabaseUsername
 #DatabaseUsername
