@@ -16,6 +16,7 @@ xx-xx-2013
 - added even more information to the WebUI
 - external media items are shown in WebUI too
 - transcoding is now avaiable to be configured per client seperately
+- added the configuration option TempDir in configuration file to configure the directory for temporary files
 
 Version 0.53.0
 15-08-2012
